--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
+    "@types/lodash": "^4.14.113",
     "angular-in-memory-web-api": "^0.6.1",
     "core-js": "^2.5.4",
+    "lodash": "^4.17.10",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
   },
